# rattles

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: no_std.rs  showcase.rs
src/: clock.rs  lib.rs  macros.rs  size.rs  state.rs  ticked.rs  timed.rs  util.rs
src/presets/: mod.rs
src/presets/arrows/: mod.rs
src/presets/ascii/: mod.rs
src/presets/braille/: mod.rs
src/presets/emoji/: mod.rs
