[package]
authors = ["vyfor"]
categories = ["command-line-interface"]
description = "A collection of terminal spinners"
edition = "2024"
keywords = ["terminal", "tui", "spinner", "animation"]
license = "MIT"
name = "rattles"
repository = "https://github.com/vyfor/rattles"
version = "0.2.1"

[lib]
crate-type = ["lib"]

[features]
default = ["std"]
std = []

[dev-dependencies]
crossterm = "0.29"
ratatui = "0.29"
